# DocuStruct

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  test_pipeline.py
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ConfigHeader.tsx  DocumentIngestionPanel.tsx  JsonPanel.tsx  QueryResultPanel.tsx
dashboard/src/services/: api.ts
src/api/: main.py
src/api/routers/: documents.py
src/core/: config.py  database.py
src/pipeline/: extractor.py  parser.py  schemas.py
