[tool.poetry]
name = "docustruct"
version = "0.1.0"
description = "Agentic Document Ingestion & Structured Knowledge Extraction Pipeline"
authors = ["Daveralphy"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
qdrant-client = "^1.8.1"
pymupdf = "^1.23.26"
google-generativeai = "^0.4.1"
celery = "^5.3.6"
redis = "^5.0.3"
instructor = "^1.0.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
